# python-spec-test-suite

./: AUDIT_FINDINGS.md  COMPLETION.md  DESIGN-ADD-STANDARD-LIBRARY-COVERAGE.md  IMPLEMENTATION_STRATEGY.md  LANGUAGE_REFERENCE_ANALYSIS.md  Makefile  PROJECT_PLAN.md  PROOF_OF_CONCEPT_SELECTION.md  README.md  RESEARCH_ANALYSIS.md  TECHNICAL_CHALLENGES.md  conftest.py  fix_version_checks.py  pyproject.toml  pytest.ini  requirements.txt  run_micropython_tests.py  test-report-micropython-latest.json
.beads/: .beads-credential-key  metadata.json
.github/workflows/: conformance-tests.yml
docs/: README.md
docs/sections/: SECTION_2_7_DOCUMENTATION.md  SECTION_3_3_DOCUMENTATION.md  SECTION_6_2_DOCUMENTATION.md  SECTION_6_3_DOCUMENTATION.md  SECTION_7_11_DOCUMENTATION.md  SECTION_7_1_DOCUMENTATION.md  SECTION_8_2_DOCUMENTATION.md  SECTION_8_4_DOCUMENTATION.md  SECTION_8_6_DOCUMENTATION.md  SECTION_8_8_DOCUMENTATION.md
tests/conformance/: EXAMPLE_VERSION_SPECIFIC_TESTS.py  SECTION_2_1_DOCUMENTATION.md  SECTION_2_6_DOCUMENTATION.md  SECTION_2_8_DOCUMENTATION.md  SECTION_7_2_DOCUMENTATION.md  SECTION_8_10_DOCUMENTATION.md  SECTION_8_1_DOCUMENTATION.md  SECTION_8_3_DOCUMENTATION.md  SECTION_8_7_DOCUMENTATION.md  VERSION_AWARE_TESTING.md  section_2_6_numeric_literals.py  test_section_2_1_line_structure.py  test_section_2_2_other_tokens.py  test_section_2_3_names_identifiers_keywords.py  test_section_2_4_literals.py  test_section_2_5_string_bytes_literals.py  test_section_2_6_numeric_literals.py  test_section_2_7_string_bytes_literals.py  test_section_2_8_operators_delimiters.py  test_section_3_3_special_method_names.py  test_section_3_data_model.py  test_section_4_execution_model.py  test_section_5_import_system.py  test_section_6_10_comparisons.py  test_section_6_11_boolean_operations.py  test_section_6_12_assignment_expressions.py  test_section_6_13_conditional_expressions.py  test_section_6_14_lambdas.py  test_section_6_15_expression_lists.py  test_section_6_16_evaluation_order.py  test_section_6_1_arithmetic_conversions.py  test_section_6_2_atoms.py  test_section_6_3_primary_expressions.py  test_section_6_4_await_expressions.py  test_section_6_5_power_operator.py  test_section_6_6_unary_arithmetic_bitwise_operations.py  test_section_6_7_binary_arithmetic_operations.py  (+27 more)
(+3 files in other folders)
