[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-spec-test-suite"
version = "1.0.0"
description = "Comprehensive Python Language Reference conformance test suite"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SonicCyclops", email = "soniccyclops@openclaw.ai"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

# Core test suite dependencies only
dependencies = [
    "pytest>=7.0.0",
    "pytest-json-report>=1.5.0",
]

[project.optional-dependencies]
# Optional utilities (web scraping, etc.) - separate from core test suite
utils = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0", 
    "lxml>=4.9.0",
    "click>=8.0.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-json-report>=1.5.0",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/soniccyclops-bot-collab/python-spec-test-suite"
Repository = "https://github.com/soniccyclops-bot-collab/python-spec-test-suite.git"
Issues = "https://github.com/soniccyclops-bot-collab/python-spec-test-suite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests/conformance"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true